# yukino-sdk

./: .gitmodules  LICENSE  README.md  jitpack.yml  settings.gradle.kts  update_pdfium.py
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/yukinoshita/yukino_pdf_sdk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yukinoshita/yukino_pdf_sdk/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
pdfium-sdk/: build.gradle.kts  pdfium_version.txt
pdfium-sdk/src/androidTest/java/com/yukinoshita/pdfium_sdk/: ExampleInstrumentedTest.kt
pdfium-sdk/src/main/cpp/: CMakeLists.txt
yukino-sdk/: build.gradle.kts
yukino-sdk/src/main/cpp/: CMakeLists.txt  mobi_bridge.c
yukino-sdk/src/main/cpp/pdfium/: pdf_bridge.cpp
yukino-sdk/src/main/java/com/yukinoshita/mobi/: MobiBridge.kt
yukino-sdk/src/main/java/com/yukinoshita/pdfium/: PdfiumBridge.kt
yukino-sdk/src/test/java/com/yukinoshita/pdfium_sdk/: ExampleUnitTest.kt
